<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_User"
    android:background="@color/colorPrimary">

    <TextView
        style="@style/AppTheme.txtPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        style="@style/AppTheme.edtPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/AppTheme.edtPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginTop="148dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/create_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/AppTheme.edtPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/AppTheme.edtPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Repetir_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/AppTheme.btnAtras"
        android:onClick="goToMain"
        android:layout_width="149dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="416dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/AppTheme.btnAtras"
        android:layout_width="149dp"
        android:layout_height="51dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="416dp"
        android:text="@string/log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>